# hw2_final-

./: .gitignore  CMakeLists.txt  CMakePresets.json  MIGRATION_RULES.md  README.md  TODO.txt  readme.txt  vcpkg-configuration.json  vcpkg.json
Input1/: map.npy  mission_config.yaml  simulation_compositions.yaml  simulation_config.yaml
Input2/: drone_config.yaml  simulation_config.yaml
Input3/: map.npy  simulation_config.yaml
data_maps/: room_10x10x10.npy
ex_2_skeleton_compare/: .gitignore  CMakePresets.json
ex_2_skeleton_compare/cpp_yaml_example/: example.yml  generated.yml  main.cpp
ex_2_skeleton_compare/include/drone_mapper/: Map3DImpl.h  MappingAlgorithmImpl.h  ScanResultToVoxels.h  Types.h
ex_2_skeleton_compare/include/drone_mapper/types/: SimulationTypes.h
ex_2_skeleton_compare/src/: Map3DImpl.cpp  MappingAlgorithmImpl.cpp  MapsComparison.cpp  ScanResultToVoxels.cpp  SimulationManager.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp
include/drone_mapper/: ConfigParser.h  DroneControlImpl.h  IDroneMovement.h  IGPS.h  ILidar.h  IMappingAlgorithm.h  Map3DImpl.h  MappingAlgorithmImpl.h  MapsComparison.h  MockGPS.h  MockLidar.h  MockMovement.h  NpyMapIO.h  SimulationOutputWriter.h  Units.h
include/drone_mapper/types/: DroneTypes.h  LidarTypes.h  MapTypes.h  SimulationTypes.h
reference_ex1_do_not_copy/: .gitignore  CMakeLists.txt  README.txt  bonus.txt
reference_ex1_do_not_copy/.devcontainer/: Dockerfile
reference_ex1_do_not_copy/Input1/: drone_config.txt  map_input.txt  mission_config.txt
reference_ex1_do_not_copy/Input1/original_output/: drone_log.csv
reference_ex1_do_not_copy/Input2/: drone_config.txt  map_input.txt  mission_config.txt
reference_ex1_do_not_copy/Input2/original_output/: drone_log.csv
reference_ex1_do_not_copy/Input3/: drone_config.txt  map_input.txt  mission_config.txt
reference_ex1_do_not_copy/Input3/original_output/: drone_log.csv
reference_ex1_do_not_copy/include/: ConfigParser.h  DroneConfig.h  DroneState.h  GridMap.h  GroundTruthMap.h  IBuildingMap.h  ILidarSensor.h  IMovementDriver.h  IPositionSensor.h  MapFileWriter.h  MissionConfig.h  MockLidarSensor.h  MockMovementDriver.h  MockPositionSensor.h  ScoreCalculator.h  SparseBuildingMap.h  Types.h  Units.h  drone.h  simulator.h
reference_ex1_do_not_copy/src/: ConfigParser.cpp  GridMap.cpp  GroundTruthMap.cpp  IMovementDriver.cpp  MapFileWriter.cpp  MockLidarSensor.cpp  MockMovementDriver.cpp  MockPositionSensor.cpp  ScoreCalculator.cpp  SparseBuildingMap.cpp  drone.cpp  main.cpp  simulator.cpp
reference_ex1_do_not_copy/tools/: visualize_drone_path.py  visualize_map.py
src/: ConfigParser.cpp  DroneControlImpl.cpp  Map3DImpl.cpp  MappingAlgorithmImpl.cpp  MapsComparison.cpp  MissionControlImpl.cpp  MockLidar.cpp  MockMovement.cpp  NpyMapIO.cpp  SimulationManager.cpp  SimulationOutputWriter.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp  drone_mapper_simulation_main.cpp  maps_comparison_main.cpp
test_configs/: drone_config.yaml  lidar_config.yaml  mission_config.yaml  simulation_compositions.yaml  simulation_compositions_all_maps.yaml  simulation_compositions_missing_map.yaml  simulation_config.yaml  simulation_config_five_voxels.yaml  simulation_config_missing_map.yaml  simulation_config_single_x2.yaml  simulation_config_single_x4.yaml  simulation_config_two_planes.yaml
tests/components/: ConfigParserTests.cpp  DroneControlTests.cpp  MappingAlgorithmTests.cpp  MapsComparisonTests.cpp  MissionControlTests.cpp  MockLidarTests.cpp  ScanResultToVoxelsTests.cpp  SimulationManagerTests.cpp  SimulationRunTests.cpp
tests/integration/: IntegrationTests.cpp
tests/support/: TestHelpers.h
tools/: analyze_maps.py  check_algorithm_termination.sh  check_algorithm_termination_matrix.sh  check_benchmark_max_steps.sh  check_failed_backtrack_legality.py  check_reachable_space.py  check_reachable_space_with_drone_size.py  check_start_positions.sh  inspect_npy_maps.py  run_config_variation_smoke.sh  run_default_behavior_smoke.sh  run_generated_cases_smoke.sh  run_more_maps_smoke.sh  run_scenario_matrix_smoke.sh  run_submission_checks.sh
